[project]
name = "chowist"
description = "Great places are chosen by great chowists"
version = "3.3.3"
dependencies = [
    "crispy-bootstrap5==2026.3",
    "Django==6.0.2",
    "django-crispy-forms==2.6",
    "django-filter==25.2",
    "gunicorn==25.1.0",
    "psycopg2-binary==2.9.11",
    "redis==7.2.1",
    "ruff",
    "mypy",
    "coverage",
]
requires-python = ">=3.12"

[tool.ruff]
line-length = 160

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
# F405: Star imports are useful for common project settings
ignore = ["F405"]

[tool.coverage.report]
fail_under = 80

[tool.coverage.run]
source = ["chowist", "places", "portal"]

[tool.mypy]
ignore_missing_imports = true
